refactor(backend): update security configuration and movie service logic